Edited Sidebar to remove settings, updated .gitignore to include csv folder

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ Thumbs.db
 *~
 
 # CSV resources (keep source but ignore generated)
-/src/main/resources/*.csv
+/src/main/resources/csv/*
 
 # Backup files
 *.bak
